stop horizontal scrolling due to wide cover image

--- a/css/layout.less
+++ b/css/layout.less
@@ -1,6 +1,10 @@
 @top-nav-height: 75px;
 @left-nav-width: 208px;
 
+#app {
+  overflow-x: hidden;
+}
+
 nav {
   ul {
     .no-bullets;
